# LLMbias

./: .gitignore  README.md  pyproject.toml  基于反事实检测与约束重写的大语言模型偏见修正方法研究.txt  摘要.docx
Evaluation/: README.md  __init__.py  common.py  detection_file_metrics.py  regard_classifier.py  sentiment_vader.py  toxicity_bert.py
FairMask/: Measure.py  README.md  __init__.py  runexp.py
FairMask/Baseline/: FairSMOTE.py  Random.py  Reweighing.py
FairMask/Data/: GermanData_processed.csv  adult_processed.csv  bank_processed.csv  default_processed.csv  h181_processed.csv
FairMask/xFAIR/: xFAIR.py
configs/: default.yaml  mock.yaml  qwen_local.yaml
data/RedditBias/: gender_prompt_1000.json  race_prompt_1000.json  religion1_prompt_1000.json
src/llmbias/: __init__.py  cli.py  config.py  schemas.py
src/llmbias/correction/: __init__.py  corrector.py  localizer.py  priority.py  rewriter.py  validator.py
src/llmbias/datasets/: __init__.py  bbq.py  bold.py  toxigen.py
src/llmbias/detection/: __init__.py  attribute_extractor.py  counterfactual_generator.py  detector.py  difference_scorer.py  judge.py
src/llmbias/evaluation/: __init__.py  metrics.py
src/llmbias/experiments/: __init__.py  correction_file_runner.py  correction_runner.py  dataset_runner.py  detection_runner.py  end_to_end_runner.py  runner.py
src/llmbias/models/: __init__.py  base.py  (+3 more)
tests/: test_correction.py  test_detector.py  test_evaluation_metrics.py  test_gender_lexicon.py  test_judge.py  test_political_counterfactuals.py  test_race_lexicon.py
visualization/: README.md  plot_experiment_results.py
(+5 files in other folders)
