[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmbias"
version = "0.1.0"
description = "Research framework for black-box LLM bias detection and constrained correction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "transformers>=4.45",
  "accelerate>=0.33",
]

[project.scripts]
llmbias = "llmbias.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
